--- a/src/main/webapp/include/link.html
+++ b/src/main/webapp/include/link.html
@@ -3,4 +3,4 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="icon" href="data:image/x-icon;,">
-<link rel="stylesheet" href="/benson/css/benson.css">
+<link rel="stylesheet" href="${ctx}/css/benson.css">
