--- a/src/main/webapp/include/link.html
+++ b/src/main/webapp/include/link.html
@@ -1,3 +1,10 @@
+<!-- 
+    Benson - A simple Jakarta EE Web Application
+    
+    https://github.com/egalli64/benson
+    
+    HTML fragment meant to be used in JSP - notice the ctx variable that should contain the context path
+ -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
